# sircylworkflow

./: .env  Dockerfile  main.py  pyproject.toml  sircylworkflow.code-workspace
docs/: Rabbit.adoc
sircyl/: constants.py  error.py  rabbitmq.py
sircyl/domain/: commands.py
sircyl/restserver/: __init__.py  routes.py  security.py
sircyl/service_layer/: handlers.py  messagebus.py  unit_of_work.py  view.py
sircylworkflow/: constants.py  containers.py  customsecrets.py  globals.py  messagebus.py  pathsecrets.py  rabbitmq.py  restserver.py  symetrickey.py  viewmodel.py
sircylworkflow/application/: authzmock.py  commands.py  sircylmock.py
sircylworkflow/application/handlers/: descargar_documentos_asiento.py  ejecutar_plan_descarga.py  generar_plan_descarga.py
sircylworkflow/application/services/: sircylservice.py
sircylworkflow/cli/: descarga_asientos_worker.py  documents_parser_worker.py  restserver.py
sircylworkflow/di/: application.py  containers.py  messagebus.py  restserver.py  services.py  view.py
sircylworkflow/di/application/: authzmock.py  handlers.py
sircylworkflow/di/domain/: commands.py  model.py
sircylworkflow/di/infra/: application.py  security.py
sircylworkflow/di/services/: sircylservice.py
sircylworkflow/di/view/: routes.py
sircylworkflow/domain/: commands.py  events.py  security.py
sircylworkflow/infra/: application.py  descarga_documentos_sircyl_worker.py  security.py
sircylworkflow/infra/flask/: application.py  errorhandlers.py  routes.py
sircylworkflow/infra/rabbit/: documents_parser_worker.py  sircyl_document_downloader_worker.py
sircylworkflow/restserver/: __init__.py  containers.py  errorhandlers.py  globals.py  routes.py  security.py
sircylworkflow/service_layer/: handlers.py  messagebus.py  unit_of_work.py
sircylworkflow/view/: errorhandlers.py  routes.py
tests/: test_csv.py  test_current_user_context.py
tests/http_requests/: 20251126150917.csv  pruebas_locales.http
