[project]
name = "sircyl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["authzclient", "sircylclient"]

[tool.uv.sources]
authzclient = { workspace = true }
sircylclient = { workspace = true }

[tool.uv.workspace]
members = ["packages/*"]

[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    {include-group = "lint"},
    {include-group = "test"}
]
lint = [
    "ruff>=0.14.5",
]
prod = [
]
test = [
    "pytest>=9.0.1",
]

[tool.uv]
default-groups = ["dev", "prod"]
